# llm-video-editor

./: .gitignore  CLAUDE.md  README.md  TESTING_RESULTS.md  WORKFLOW_STATUS.md  environment.yml  pyproject.toml  requirements.txt  setup.py  setup_environment.sh  test_concat_fix.py  test_full_rendering.py  test_ollama_workflow.py
debug_output/: scenes.json
examples/: config.json  example_usage.py
llm_video_editor/: __init__.py  cli.py
llm_video_editor/cli/: __init__.py  chat.py  clarifier.py  main.py
llm_video_editor/core/: asr.py  edl_resolver.py  media_probe.py  music_ducking.py  nvenc_renderer.py  ollama_planner.py  parallel_asr.py  planner.py  quality_control.py  renderer.py  scene_detection.py  smart_reframing.py  workflow.py
llm_video_editor/generative/: __init__.py  broll.py  opensora_client.py  svd_client.py
llm_video_editor/presets/: __init__.py  platform_presets.py
llm_video_editor/utils/: __init__.py  ffmpeg_utils.py  file_utils.py
tests/: test_basic.py
